# price-oracle-lf

./: .dockerignore  .env.example  .env.railway.staging  .gitignore  CHANGELOG.md  Dockerfile  README.md  assets.json  main.py  pyproject.toml  railway.json
TODOs/: Cache.md
TODOs/done/: init.md
service/: __init__.py  assets.py  sync.py
tests/: __init__.py  test_assets.py  test_duckdb_s3.py  test_sync.py
