[project]
name = "price-oracle-lf"
version = "0.1.5"
description = "Periodic market data service — incremental Binance OHLCV pulls to S3"
requires-python = ">=3.11"
dependencies = [
    "groai-fi-datastore-shared>=0.2.4",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]



[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
